styles/layouts/_global-footer.scss
.global-footer {
  padding: 32px 0 40px;
  background-color: $background;

  &-title {
    @include text-style(13, $dark);
    font-weight: 700;

    .ic-chevron {
      display: inline-block;
      font-size: 12px;
      transform: rotate(-90deg);
    }
  }

  &-contact {
    @include text-style(24, $dark);
    font-weight: 700;
  }

  &-time {
    @include text-style(12, $primary);
    margin-bottom: 24px;
  }

  &-detail-list {
    font-size: 10px;
    font-weight: 400;
    line-height: 10px;
    letter-spacing: -0.01em;
    color: $secondary;
  }

  &-detail-item {
    @include flexbox(start);
    padding: 3px 0;

    dt::after {
      margin: 0 2px;
      content: ':';
    }

    address {
      display: inline;
    }
  }

  @include responsive(D) {
    &-title {
      @include text-style(14);
    }

    &-contact:hover {
      opacity: 0.5;
    }

    &-detail-list {
      @include flexbox(start);
    }

    &-detail-item {
      padding: 0;

      a:hover {
        text-decoration: underline;
      }

      &:not(:last-child):after {
        margin: 0 8px;
        content: '|';
      }
    }
  }
}

